--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+	<script src="./index.js"></script>
 	<title>Quote Generator</title>
 </head>
 
@@ -18,7 +19,7 @@
 						Loading...
 					</div>
 					<div class="align-middle  order-1 md:order-2 -m-16 md:m-6 invisible md:visible">
-						<img class="w-32 h-32 max-w-xl opacity-75 rounded-full" src="/355952.jpg">
+						<img class="w-32 h-32 max-w-xl opacity-75 rounded-full" src="./355952.jpg" alt="Spinning Wheel">
 					</div>
 				</div>
 				<p class="text-gray-600 text-sm pb-4" id="author"></p>
@@ -27,12 +28,9 @@
 					class="flex items-center px-4 py-2 m-auto font-semibold text-white transition duration-500 ease-in-out transform rounded-lg shadow-xl bg-gradient-to-r from-gray-700 to-gray-500 hover:from-gray-500 hover:to-gray-700 hover:-translate-y-1 hover:scale-110 focus:ring focus:outline-none">Spin
 					it!</button>
 				<div id="copyright" class="text-xs text-center pt-8 mx-auto text-gray-400">Quotes kindly provided by: <a
-						href="http://quotes.stormconsultancy.co.uk/api">Adam Pope @ StormConsultancy</a></div>
+						href="https://dummyjson.com/">DummyJSON</a></div>
 				<div id="apiFailed" class="text-xs text-center mx-auto text-red-400"></div>
 			</div>
 		</div>
-
 </body>
-<script src="/index.js"></script>
-
 </html>
