--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-	<script src="./index.js"></script>
 	<title>Quote Generator</title>
 </head>
 
@@ -22,7 +21,7 @@
 						<img class="w-32 h-32 max-w-xl opacity-75 rounded-full" src="./355952.jpg" alt="Spinning Wheel">
 					</div>
 				</div>
-				<p class="text-gray-600 text-sm pb-4" id="author"></p>
+				<p class="text-center text-gray-600 text-sm pb-4" id="author"></p>
 
 				<button id="spin"
 					class="flex items-center px-4 py-2 m-auto font-semibold text-white transition duration-500 ease-in-out transform rounded-lg shadow-xl bg-gradient-to-r from-gray-700 to-gray-500 hover:from-gray-500 hover:to-gray-700 hover:-translate-y-1 hover:scale-110 focus:ring focus:outline-none">Spin
@@ -33,4 +32,5 @@
 			</div>
 		</div>
 </body>
+	<script src="./index.js"></script>
 </html>
